tests/invalid/polymorphic_unification.err_exp
Software error: polymorphic_unification.m:019: Sorry, not implemented: polymorphic unification in mode other than (in, in)
Stack dump not available in this grade.
